--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,30 @@
 }
 
 .container{
-  min-height: 50vh;
+  min-height: 80vh;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.not-found{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.not-found h2{
+  padding: 8px;
+  margin-bottom: 8px;
+}
+.back-btn{
+  border: 1px solid #8b5cf6;
+  border-radius: 5px;
+  padding: 8px;
+}
+.back-btn:hover{
+  background-color: #8b5cf6;
+  color: #fff;
+  cursor: pointer;
 }
 
 footer{
