Change styles and Project name

--- a/src/App.css
+++ b/src/App.css
@@ -26,21 +26,23 @@
   justify-content: center;
 }
 
-.not-found{
+.flex-column{
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 .not-found h2{
   padding: 8px;
   margin-bottom: 8px;
 }
-.back-btn{
+.primary-btn{
   border: 1px solid #8b5cf6;
   border-radius: 5px;
   padding: 8px;
+  margin: 8px 0;
 }
-.back-btn:hover{
+.primary-btn:hover{
   background-color: #8b5cf6;
   color: #fff;
   cursor: pointer;
