--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,28 @@ footer{
   align-items: center;
   justify-content: center;
 }
+
+.tab-wrapper{
+  width: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+
+.tab__link{
+  border-right: 1px solid #e2e2e2;
+  padding: 1.5rem 2.5rem;
+  margin: 0;
+  width: 100%;
+  color: #444;
+}
+.tab__link.active{
+  border-right: 2px solid #8b5cf6;
+  color: #8b5cf6;
+}
+
+.tab-content{
+  width: 100%;
+  text-align: center;
+}
